# BCA-Reaper

./: .gitignore  README.md  build.py  keylogger_demo.py  pyproject.toml  requirements.txt  run.py  trojan.cfg  trojan.ini  trojan.py
demo_files/: keylogger_demo.py  scanner_demo.py  screenshot_demo.py  sysinfo_demo.py
src/: exfiltrators.py  keylogger.py  keylogger_demo.py  reaper.py  reporting.py  trojan.py
src/modules/: __init__.py
src/modules/exfiltration/: __init__.py  base.py  discord_server.py  email.py  exfiltration_module.py  file.py  google_forms.py  screen.py
src/modules/exploitation/: __init__.py  base.py  exploitation_module.py  keylogger.py  scanner.py  screenshot.py  system_information.py
