[tool.poetry]
name = "reaper"
version = "0.1.0"
description = "Reaper is a Python 3 application that logs keystrokes, takes screenshots, grabs system information and exfiltrates to Discord and Google Forms"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiohttp = "^3.7.4"
discord = "^1.7.3"
pynput = "^1.7.4"
mss = "^6.1.0"
configdot = "^0.10.1"
pyinstaller = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
